# Serialize

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  _binary_serializer_8hpp_source.html  _binary_stream_8hpp_source.html  _j_s_o_n_serializer_8hpp_source.html  _j_s_o_n_stream_8hpp_source.html  _string_binary_serializer_8hpp_source.html  _type_specs_8hpp_source.html  _vector_binary_serializer_8hpp_source.html  annotated.html  class_s_a_1_1_ser_1_1_binary_stream-members.html  class_s_a_1_1_ser_1_1_binary_stream.html  class_s_a_1_1_ser_1_1_j_s_o_n_stream-members.html  class_s_a_1_1_ser_1_1_j_s_o_n_stream.html  classes.html  dir_19eb95434e911e26aa07896bdaefbc46.html  dir_3696fdd2930762cbe0db5bb333200de1.html  dir_5e42f1ed0250ef473f569b10c537902f.html  dir_856524284ebe840938865dc061f982fb.html  dir_91b7396d9c38f1c90a0fe746335b18ef.html  dir_a3eab3772499d73e7b10b7f7d09f335e.html  dir_ef1e1e1bef8d5ab8e8a0b8e5cbe1f019.html  files.html  index.html  struct_s_a_1_1_ser_1_1_type_specs-members.html  struct_s_a_1_1_ser_1_1_type_specs.html
.github/workflows/: test_macos.yml  test_unix.yml  test_windows.yml
Doc/: doxygen.config
Include/SA/Collections/: Serialize  SerializeBinary  SerializeJSON  SerializeMethods  Serializers
Include/SA/Serialize/: BinarySerializer.hpp  JSONSerializer.hpp  Method.hpp  Reader.hpp  Serializer.hpp  TypeSpecs.hpp
Include/SA/Serialize/Binary/: BinarySerializer.hpp  BinarySerializer.inl  BinaryStream.hpp
Include/SA/Serialize/Binary/Specs/: StringBinarySerializer.hpp  VectorBinarySerializer.hpp
Include/SA/Serialize/JSON/: JSONSerializer.hpp  JSONStream.hpp
Include/SA/Serialize/Methods/: Binary.hpp  Method.hpp
Include/SA/Serialize/Misc/: TypeSpecs.hpp
Include/SA/Serialize/Serializers/: Serializer.hpp  StringSerializer.hpp  VectorSerializer.hpp
Include/SA/Serializer/: dummy.hpp
Source/SA/Serialize/: BinarySerializer.cpp  JSONSerializer.cpp  Reader.cpp
Source/SA/Serialize/Binary/: BinarySerializer.cpp  BinaryStream.cpp
Source/SA/Serialize/Methods/: Binary.cpp
Source/SA/Serializer/: Dummy.cpp
Tests/: CMakeLists.txt
Tests/Prototype/: CMakeLists.txt  Proto_RefurekuSettings.toml  main.cpp
Tests/Prototype/Include/: TestClass.hpp
Tests/UnitTests/: CMakeLists.txt
search/: all_1.js  all_2.js  classes_0.js  searchdata.js
